welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: not found: value fonctionTest
while (!fonctionTest())
        ^