welcome.lessons.welcome.traversal.Snake.scala.code
override def run()

baisseBrosse()
while (!fonctionTest())
{
	if(!estFaceMur)
	{
		avance()
	}

		else
		{
		if(getDirection()==Direction.EST)
		{
			gauche()
			avance()
			gauche()
		}
		else
		{
			droite()
			avance()
			droite()
		}
		}

}
